unpackaged/main/default/objects/Due_Diligence__c/Due_Diligence__c.object-meta.xml
<CustomObject>
    <description>This object will be used to track records related to due diligence performed for compliance purposes.</description>
    <label>Due Diligence</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Due Diligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>