unpackaged/main/default/objects/Due_Diligence__c/fields/Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Decline_Date__c</fullName>
    <label>Decline Date</label>
    <type>Date</type>
</CustomField>