unpackaged/main/default/objects/Due_Diligence__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>