unpackaged/main/default/objects/Due_Diligence__c/recordTypes/Broker_Due_Diligence.recordType-meta.xml
<RecordType>
    <fullName>Broker_Due_Diligence</fullName>
    <active>true</active>
    <description>Record type to be used when conducting future due diligence review on Broker Accounts</description>
    <label>Broker Due Diligence</label>
</RecordType>