unpackaged/main/default/objects/Due_Diligence__c/validationRules/Broker_Decline_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Decline_Reason_Required</fullName>
    <active>true</active>
    <description>Broker Decline Reason must be entered when declining a Broker Account.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c , "Decline"), 
ISCHANGED(Status__c ), 
ISBLANK(Decline_Reason__c) 
)</errorConditionFormula>
    <errorMessage>Broker Decline Reason must be entered when declining a Broker Account.</errorMessage>
</ValidationRule>